$Id: ChangeLog,v 1.72 2007-09-15 21:59:54 cmatsuoka Exp $

Stable versions
---------------

2.2.1 ()
	- build plugin files as PIC
	- raised sample number limit from 255 to 1024 (fixes megaman.xm
	  tempo and missing instruments reported by Jon Rafkind)

2.2.0 (20070915)
	- added more module format specs
	- added CD61 Octalyser module support
	- added Flextrax FLX module detection
	- added TCB Tracker module loader
	- added Digital Tracker DTM module loader
	- added Digital Tracker FA04/6/8 module support
	- added Real Tracker module loader
	- added X-Tracker module loader
	- added portable, 64bit-safe MMD0/1/2/3 MED loader
	- added Graoumf Tracker GTK module loader
	- added old Liquid Tracker "NO" module loader
	- added OSX CoreAudio driver
	- added S3M/PTM/IMF/LIQ/IT fine vibrato effect
	- added Archimedes Tracker loader
	- added Arc/!Spark depacker
	- added ArcFS depacker
	- added Archimedes VIDC sample converter
	- added Digital Symphony module loader
	- added Megatracker module loader
	- added Desktop Tracker module loader
	- added Zoo depacker
	- added MED3 module loader
	- added MED4 module loader
	- added IIgs ASIF sample converter
	- added IIgs SoundSmith/MegaTracker loader
	- added Audacious plugin
	- enabled WAV writer
	- enabled IMF filter effects
	- enabled Game Music Creator prowizard converter
	- removed broken shared lib generation
	- removed packed structures
	- replaced non-free PowerPack depacker with Kyzer's PD version
	- replaced list management in IFF loader with kernel list helpers
	- replaced XMMS plugin with Beep Media Player plugin
	- fixed long-standing bug in S3M BPM handling, "Panic" plays correctly
	- fixed MDL effects translation
	- fixed MDL pattern order loading missing first pattern
	- fixed MDL memory corruption in envelope initialization
	- fixed MDL 16-bit sample depacking (reported by Paul Wise)
	- fixed MDL multisampled instrument mapping
	- fixed MDL note event keyoff (gothlord.mdl plays better)